syntax = "proto3";

package chef.automate.api.authz.request;
option go_package = "github.com/chef/automate/components/automate-gateway/api/authz/request";

message IntrospectAllReq {
}

message IntrospectSomeReq {
    repeated string paths = 1;
}

message IntrospectReq {
    string path = 1;
    repeated string parameters = 2;
}
