syntax = "proto3";

import "google/protobuf/timestamp.proto";

package chef.automate.api.authz.response;
option go_package = "github.com/chef/automate/components/automate-gateway/api/authz/response";

message MethodsAllowed {
    bool get = 1;
    bool put = 2;
    bool post = 3;
    bool delete = 4;
    bool patch = 5;
}

message IntrospectResp {
    map<string, MethodsAllowed> endpoints = 1;
}
